--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildTypes.each {
+        it.buildConfigField 'String', 'EYES_GCP_KEY', EYES_GCP_KEY
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/INDEX.LIST'
+    }
 
 }
 
@@ -28,14 +42,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     // Google Cloud Vision API
-    implementation 'com.google.android.gms:play-services-base:11.8.0'
-    implementation 'com.google.android.gms:play-services-auth:16.0.0'
     implementation 'com.google.android.gms:play-services-vision:15.0.2'
-    implementation 'com.google.apis:google-api-services-vision:v1-rev16-1.22.0'
-    implementation ('com.google.api-client:google-api-client-android:1.22.0') {
-        exclude module: 'httpclient'
-    }
-    implementation ('com.google.http-client:google-http-client-gson:1.20.0') {
-        exclude module: 'httpclient'
-    }
+    implementation 'com.google.cloud:google-cloud-vision:1.40.0'
 }
